Prevented name input from being too wide

--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -99,6 +99,7 @@
 		align-items: center;
 		margin: 0;
 		z-index: 2;
+		max-width: 50%;
 
 		input {
 			margin-left: .5ch;
